--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,42 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap");
 
+:root {
+  --primary-color: blueviolet;
+}
+
 body {
   font-family: "Montserrat", sans-serif;
+}
+
+hr {
+  margin: 1rem 0;
 }
 
 /* container */
 
 .container {
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding: 0rem, 1rem;
 }
 
 .container-centered {
   max-width: 600px;
   margin: auto;
   /* for center */
+}
+
+/* links */
+.link {
+  text-decoration: none;
+  padding: 0.5rem, 1rem;
+}
+
+.primary-link {
+  background-color: var(--primary-color);
+  border-radius: 0.5rem;
+  color: white;
+}
+
+.secondary-link {
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
 }
