--- a/styles.css
+++ b/styles.css
@@ -40,3 +40,14 @@ hr {
   color: var(--primary-color);
   border: 1px solid var(--primary-color);
 }
+
+/* lists */
+
+.non-bullet {
+  list-style: none;
+}
+
+.list-inline {
+  display: inline;
+  padding: 0rem 0.5rem;
+}
