--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap");
 
 :root {
-  --primary-color: blueviolet;
+  --primary-color: #7c3af0;
+  --dark-gray: #6b7280;
 }
 
 body {
@@ -76,4 +77,24 @@ hr {
 
 .navigation .link-active {
   font-weight: bold;
+}
+
+/*header*/
+
+.hero {
+  padding: 2rem;
+}
+.hero .hero-img {
+  max-width: 300px;
+  display: block;
+  margin: auto;
+}
+
+.hero .hero-heading {
+  padding-top: 1rem;
+  color: #6b7280;
+}
+
+.hero .hero-heading .heading-inverted {
+  color: #7c3af0;
 }
