--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 
 body {
   font-family: "Montserrat", sans-serif;
+  margin: 0;
 }
 
 hr {
@@ -93,8 +94,39 @@ hr {
 .hero .hero-heading {
   padding-top: 1rem;
   color: #6b7280;
+  text-align: center;
 }
 
 .hero .hero-heading .heading-inverted {
   color: #7c3af0;
+}
+
+/* section  */
+
+.section h1 {
+  text-align: center;
+  padding: 2rem;
+}
+
+.ow {
+  color: #f3f4f6;
+}
+
+/* footer */
+
+footer {
+  background-color: var(--primary-color);
+  padding: 2rem 1rem;
+  text-align: center;
+  color: white;
+  list-style: none;
+  border-top-right-radius: 1rem;
+}
+
+.footer .link {
+  color: white;
+}
+
+.footer ul {
+  padding-inline-start: 0px;
 }
