--- a/styles.css
+++ b/styles.css
@@ -28,8 +28,11 @@ hr {
 
 /* links */
 .link {
+  box-sizing: border-box;
   text-decoration: none;
   padding: 0.5rem 1rem;
+  /*margin-top: 1rem;
+  margin-bottom: 1rem;*/
 }
 
 .primary-link {
@@ -105,26 +108,30 @@ hr {
 
 .section h1 {
   text-align: center;
-  padding: 2rem;
 }
 
 .ow {
-  color: #f3f4f6;
+  background-color: #f3f4f6;
 }
 
 /* footer */
 
 footer {
   background-color: var(--primary-color);
-  padding: 2rem 1rem;
+  padding: 2rem 0rem;
   text-align: center;
   color: white;
   list-style: none;
   border-top-right-radius: 1rem;
+  margin-top: 20px;
 }
 
 .footer .link {
   color: white;
+}
+.footer .footer-header {
+  font-weight: bold;
+  font-size: large;
 }
 
 .footer ul {
