--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,8 @@ hr {
 .link {
   box-sizing: border-box;
   text-decoration: none;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 0.5rem;
+  margin: 2px;
   /*margin-top: 1rem;
   margin-bottom: 1rem;*/
 }
@@ -87,6 +88,7 @@ hr {
 
 .hero {
   padding: 2rem;
+  padding: top 5rem;
 }
 .hero .hero-img {
   max-width: 300px;
