--- a/styles.css
+++ b/styles.css
@@ -92,15 +92,20 @@ nav .link:hover {
 
 .hero {
   padding: 2rem;
-  padding: top 5rem;
+  position: relative;
+  z-index: 1;
 }
 .hero .hero-img {
   max-width: 300px;
   display: block;
   margin: auto;
 }
+.hero-content {
+  position: absolute;
+  top: 20%;
+}
 
-.hero .hero-heading {
+/*.hero .hero-heading {
   padding-top: 1rem;
   color: #6b7280;
   text-align: center;
@@ -108,7 +113,7 @@ nav .link:hover {
 
 .hero .hero-heading .heading-inverted {
   color: #7c3af0;
-}
+}*/
 
 /* section  */
 
