--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
 body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
+  background-color: #1a1a2e;
 }
 
 hr {
@@ -15,6 +16,9 @@ hr {
 }
 
 /* container */
+nav {
+  background-color: transparent;
+}
 
 .container {
   padding: 0rem, 1rem;
@@ -65,10 +69,9 @@ nav .link:hover {
 
 /* navigation */
 .navigation {
-  background-color: blueviolet;
+  background-color: transparent;
   color: white;
   padding: 1rem;
-  border-bottom-left-radius: 1rem;
 }
 
 .navigation .nav-brand {
@@ -105,6 +108,7 @@ nav .link:hover {
   top: 20%;
   margin: auto;
   line-height: 20px;
+  color: #f3f4f6;
 }
 
 .hero-content h5 {
