--- a/styles.css
+++ b/styles.css
@@ -140,10 +140,7 @@ nav .link:hover {
 
 .section h1 {
   text-align: center;
-}
-
-.ow {
-  background-color: #f3f4f6;
+  color: white;
 }
 
 /* skill container */
