--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
-  background-color: #1a1a2e;
+  background-color: #283149;
 }
 
 hr {
@@ -209,4 +209,49 @@ nav .link:hover {
   font-size: 30px;
   margin-bottom: 50px;
   color: aliceblue;
+}
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  flex: 1;
+  justify-content: space-around;
+}
+
+.card {
+  width: 20%;
+  background: #fff;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  transition: 0.3s;
+}
+
+.card-header {
+  text-align: center;
+  padding: 20px 5px;
+}
+
+.card-body {
+  padding: 20px 10px;
+  text-align: center;
+  font-size: 18px;
+}
+
+.card:hover {
+  transform: scale(1.1);
+  box-shadow: 0 0 40px -10px rgba(0, 0, 0, 0.25);
+}
+
+@media screen and (max-width: 620px) {
+  .skill-container {
+    width: 100%;
+  }
+  .heading {
+    padding: 20px;
+    font-size: 20px;
+  }
+  .card {
+    width: 80%;
+  }
 }
