--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,15 @@
   --primary-color: #7c3af0;
   --dark-gray: #6b7280;
 }
-
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Work Sans", sans-serif;
+  margin: 0px;
+  width: 100%;
+  height: 100%;
+  overflow: visible;
+  --opacity: 0.6;
   margin: 0;
-  background-color: #4b5563;
+  background-color: #fdfcfa;
 }
 
 hr {
@@ -16,9 +20,6 @@ hr {
 }
 
 /* container */
-nav {
-  background-color: transparent;
-}
 
 .container {
   padding: 0rem, 1rem;
@@ -69,14 +70,14 @@ nav .link:hover {
 
 /* navigation */
 .navigation {
+  padding: 1.5rem;
+  color: var(--primary-color);
   background-color: transparent;
-  color: white;
-  padding: 1rem;
 }
 
 .navigation .nav-brand {
   font-weight: bold;
-  font-size: 1.1rem;
+  font-size: 2rem;
 }
 
 .navigation .nav-pills {
@@ -84,7 +85,7 @@ nav .link:hover {
 }
 
 .navigation .link {
-  color: white;
+  color: var(--primary-color);
 }
 
 .navigation .link-active {
@@ -108,10 +109,10 @@ nav .link:hover {
   top: 20%;
   margin: auto;
   line-height: 20px;
-  color: #f3f4f6;
+  color: var(--primary-color);
 }
 
-.hero-content h5 {
+.hero-content h1 {
   font-weight: 200;
   font-size: 20px;
 }
@@ -126,27 +127,19 @@ nav .link:hover {
   font-size: 30px;
 }
 
-/*.hero .hero-heading {
-  padding-top: 1rem;
-  color: #6b7280;
-  text-align: center;
-}
-
-.hero .hero-heading .heading-inverted {
-  color: #7c3af0;
-}*/
-
 /* section  */
 
-.section h1 {
+.section-title {
   text-align: center;
-  color: white;
+  opacity: var(--opacity);
+  font-size: 5rem;
+  text-transform: uppercase;
 }
 
 /* footer */
 
 .footer {
-  background-color: black;
+  background-color: var(--primary-color);
   padding: 2rem 0rem;
   text-align: center;
   color: white;
@@ -198,7 +191,7 @@ nav .link:hover {
   border: 1px solid #ccc;
   border-radius: 10px;
   margin-bottom: 10px;
-  box-shadow: 0 0 5em -1em black;
+  box-shadow: 0 0 2em -1em black;
   transition: 0.3s;
 }
 
@@ -234,4 +227,20 @@ nav .link:hover {
   .card {
     width: 80%;
   }
+}
+
+/* style for blog  */
+.blog-section {
+  display: flex;
+}
+.blog-card {
+  max-width: 400px;
+  padding: 2px;
+}
+.blog-card .blog-image {
+  width: 20px;
+}
+
+.blog-card .blog-detail {
+  color: #b9b9b9;
 }
