feat:blog page added
fixed the blog page

--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,7 @@ nav .link:hover {
   text-align: center;
   opacity: var(--opacity);
   font-size: 5rem;
+  color: var(--primary-color);
   text-transform: uppercase;
 }
 
@@ -168,7 +169,7 @@ nav .link:hover {
 
 .skill-container {
   width: 90%;
-  margin: 50px auto;
+  margin: 40px auto;
 }
 
 .skill-container .heading {
@@ -232,15 +233,19 @@ nav .link:hover {
 /* style for blog  */
 .blog-section {
   display: flex;
+  flex-direction: column;
 }
 .blog-card {
-  max-width: 400px;
-  padding: 2px;
+  text-align: center;
+  justify-content: center;
+  margin-top: 10px;
 }
-.blog-card .blog-image {
-  width: 20px;
+.blog-card img {
+  width: 250px;
+  text-align: center;
 }
 
 .blog-card .blog-detail {
+  margin-top: 5px;
   color: #b9b9b9;
 }
