--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,10 @@
   --primary-color: #7c3af0;
   --dark-gray: #6b7280;
 }
-body {
+htmlbody {
   font-family: "Work Sans", sans-serif;
   margin: 0px;
-  width: 100%;
-  height: 100%;
+
   overflow: visible;
   --opacity: 0.6;
   margin: 0;
@@ -132,7 +131,7 @@ nav .link:hover {
 .section-title {
   text-align: center;
   opacity: var(--opacity);
-  font-size: 5rem;
+  font-size: 3rem;
   color: var(--primary-color);
   text-transform: uppercase;
 }
