--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,6 @@ nav .link:hover {
 
 .section-title {
   text-align: center;
-  opacity: var(--opacity);
   font-size: 3rem;
   color: var(--primary-color);
   text-transform: uppercase;
@@ -269,7 +268,7 @@ nav .link:hover {
   width: 450px;
 }
 .proj-heading-1 {
-  color: #b9b9b9;
+  color: var(--primary-color);
 }
 
 .proj-links a {
