--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ hr {
 /* container */
 
 .container {
-  padding: 0rem, 1rem;
+  padding: 1rem, 1rem;
 }
 
 .container-centered {
@@ -69,8 +69,8 @@ nav .link:hover {
 
 /* navigation */
 .nav {
-  font-weight: 300;
-  font-size: 50px;
+  font-weight: 100;
+  font-size: 20px;
 }
 .navigation {
   padding: 1.5rem;
@@ -98,18 +98,20 @@ nav .link:hover {
 /*header*/
 
 .hero {
+  margin-top: 2px;
   padding: 2rem;
   position: relative;
-  z-index: 1;
 }
 .hero .hero-img {
-  max-width: 650px;
+  width: 60%;
+  max-width: 100%;
+  height: auto;
   display: block;
   margin: 0 0 15px auto;
 }
 .hero-content {
   position: absolute;
-  top: 10%;
+  top: 20%;
   margin: auto;
   line-height: 20px;
   color: var(--primary-color);
@@ -122,7 +124,7 @@ nav .link:hover {
 
 .hero-content h1 {
   font-weight: 500;
-  font-size: 60px;
+  font-size: 50px;
 }
 
 .hero-content p {
@@ -223,12 +225,15 @@ nav .link:hover {
   .skill-container {
     width: 100%;
   }
+  .slide {
+    display: none;
+  }
   .heading {
     padding: 20px;
     font-size: 20px;
   }
   .card {
-    width: 80%;
+    width: 30%;
   }
 }
 
@@ -266,6 +271,8 @@ nav .link:hover {
 }
 .proj-img img {
   width: 450px;
+  border: 1px solid black;
+  border-radius: 10px;
 }
 .proj-heading-1 {
   color: var(--primary-color);
