--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap");
 
+* {
+  box-sizing: border-box;
+}
 :root {
   --primary-color: #7c3af0;
   --dark-gray: #6b7280;
 }
+
 body {
   font-family: "Work Sans", sans-serif;
   margin: 0px;
@@ -168,8 +172,8 @@ nav .link:hover {
 /* new skills section */
 
 .skill-container {
-  width: 90%;
-  margin: 40px auto;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .skill-container .heading {
@@ -178,27 +182,46 @@ nav .link:hover {
   margin-bottom: 50px;
   color: var(--primary-color);
 }
-.row {
+.cards {
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
-  flex: 1;
-  justify-content: space-around;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .card {
-  width: 20%;
-  background: #fff;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  margin-bottom: 10px;
-  box-shadow: 0 0 2em -1em black;
+  border-radius: 0.25rem;
+  box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
   transition: 0.3s;
 }
 
-.card-header {
-  text-align: center;
-  padding: 10px 5px;
+@media (min-width: 40rem) {
+  .cards_item {
+    width: 50%;
+  }
+}
+
+@media (min-width: 56rem) {
+  .cards_item {
+    width: 33.3333%;
+  }
+}
+
+.cards_item {
+  display: flex;
+  padding: 1rem;
+}
+.card_title {
+  color: #ffffff;
+  font-size: 1.1rem;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: capitalize;
+  margin: 0px;
 }
 
 .card-body {
