--- a/styles.css
+++ b/styles.css
@@ -101,21 +101,22 @@ nav .link:hover {
 
 .hero {
   margin-top: 2px;
-  padding: 1rem;
+  padding: 2rem;
   position: relative;
 }
 .hero .hero-img {
   width: 50%;
   height: auto;
   display: block;
-  margin: 0 0 10px auto;
+  margin: 0 0 15px auto;
 }
 .hero-content {
   position: absolute;
-  top: 24%;
+  top: 25%;
   margin: auto;
   width: 50%;
-  line-height: 10px;
+  line-height: 20px;
+  color: var(--primary-color);
 }
 
 .hero-content h3 {
@@ -128,8 +129,9 @@ nav .link:hover {
   font-size: 50px;
 }
 
-.hero-content span {
-  color: var(--primary-color);
+.hero-content p {
+  font-weight: 200;
+  font-size: 30px;
 }
 
 /* section  */
