--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,114 @@
   --primary-color: #7c3af0;
   --dark-gray: #6b7280;
 }
-body {
-  font-family: "Work Sans", sans-serif;
-  margin: 0px;
-  overflow: visible;
-  margin: 0;
-  background-color: #fdfcfa;
-}
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
 hr {
   margin: 1rem 0;
 }
 
+/* nav experiment */
+nav {
+  height: 80px;
+  background-color: transparent;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0rem calc((100vw - 1300px) / 2);
+  background-color: var(--primary-color);
+  border-bottom-right-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+  color: white;
+}
+
+.logo {
+  font-size: 1.5rem;
+  font-weight: bold;
+  font-style: italic;
+  padding: 0 2rem;
+}
+
+nav a {
+  text-decoration: none;
+  color: #000;
+  padding: 0 1.5rem;
+  color: white;
+}
+
+.hero-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  height: 95vh;
+  padding: 3rem calc((100vw - 1300px) / 2);
+}
+
+.column-left {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 0 2rem;
+}
+
+.column-left h1 {
+  margin-bottom: 1rem;
+  font-size: 5rem;
+  font-weight: 500;
+  background-color: linear-gradient(90deg, #1565c0, #b92b27);
+}
+
+.column-left h3 {
+  font-weight: 500;
+  font-size: 40px;
+}
+
+.hero-container .column-left span {
+  color: var(--primary-color);
+}
+.column-left p {
+  margin-bottom: 2rem;
+  font-size: 3rem;
+  line-height: 1.5;
+}
+button {
+  padding: 1rem 3rem;
+  font-size: 1rem;
+  border: none;
+  background-color: #000;
+  border-radius: 2rem;
+  color: white;
+  background-color: var(--primary-color);
+  outline-style: none;
+}
+
+button:hover {
+  background-color: rgb(19, 20, 21);
+  cursor: pointer;
+}
+
+.column-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0rem 2rem;
+}
+
+.hero-image {
+  max-width: 90%;
+  height: 80%;
+}
+
+@media screen and (max-width: 768px) {
+  .hero-container {
+    grid-template-columns: 1fr;
+  }
+}
 /* container */
 
 .container {
@@ -96,7 +192,7 @@ nav .link:hover {
 
 /*header*/
 
-.hero {
+/*.hero {
   margin-top: 2px;
   padding: 1rem;
   position: relative;
@@ -114,21 +210,7 @@ nav .link:hover {
   margin-left: 5px;
   width: 50%;
   line-height: 10px;
-}
-
-.hero-content h3 {
-  font-weight: 300;
-  font-size: 40px;
-}
-
-.hero-content h1 {
-  font-weight: 500;
-  font-size: 80px;
-}
-
-.hero-content span {
-  color: var(--primary-color);
-}
+}*/
 
 /* section  */
 
@@ -137,6 +219,7 @@ nav .link:hover {
   font-size: 3rem;
   color: var(--primary-color);
   text-transform: uppercase;
+  margin-top: 3rem;
 }
 
 /* footer */
@@ -175,8 +258,8 @@ nav .link:hover {
 /* new skills section */
 
 .heading {
+  margin-top: 4rem;
   text-align: center;
-  margin: 0;
   font-size: 30px;
   margin-bottom: 50px;
   color: var(--primary-color);
@@ -184,9 +267,13 @@ nav .link:hover {
 
 .skill-container {
   display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  position: relative;
 }
 
 .card {
+  flex: 0 1 calc(25% - 1em);
   width: 20%;
   background: #fff;
   border: 1px solid #ccc;
@@ -195,6 +282,27 @@ nav .link:hover {
   padding: 2px;
   box-shadow: 0 0 2em -1em black;
   transition: 0.3s;
+}
+
+/* media queries for the responsiveness */
+
+@media screen and (min-width: 40em) {
+  .skill-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .heading {
+    position: relative;
+  }
+  .card {
+    flex: 0 1 calc(25% - 1em);
+  }
+}
+@media screen and (min-width: 60em) {
+  .card {
+    flex: 0 1 calc(25% - 1em);
+  }
 }
 
 .card-header {
@@ -216,20 +324,6 @@ nav .link:hover {
 .card img {
   text-align: center;
   width: 40%;
-}
-
-@media screen and (max-width: 620px) {
-  .skill-container {
-    flex-wrap: wrap;
-  }
-
-  .heading {
-    padding: 20px;
-    font-size: 20px;
-  }
-  .card {
-    width: 20%;
-  }
 }
 
 /* style for blog  */
