--- a/styles.css
+++ b/styles.css
@@ -263,6 +263,7 @@ nav .link:hover {
   font-size: 30px;
   margin-bottom: 50px;
   color: var(--primary-color);
+  position: relative;
 }
 
 .skill-container {
