--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ hr {
 
 /* nav experiment */
 nav {
-  height: 80px;
+  height: 100px;
   background-color: transparent;
   display: flex;
   justify-content: space-between;
@@ -31,7 +31,7 @@ nav {
 }
 
 .logo {
-  font-size: 1.5rem;
+  font-size: 1.7rem;
   font-weight: bold;
   font-style: italic;
   padding: 0 2rem;
@@ -42,6 +42,7 @@ nav a {
   color: #000;
   padding: 0 1.5rem;
   color: white;
+  font-weight: bold;
 }
 
 .hero-container {
